Fix text color for light mode The text on the homepage wasnt readable in lightmode. This fixes it by using CSS vars to change the color to a darker shade. Test Plan: Ensure text on homepage is readable in lightmode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,6 +16,12 @@
   --ifm-color-primary-lightest: #e7dffc;
   --ifm-code-font-size: 95%;
   --ifm-font-size-base: 17px;
+
+  --sc-text-color: #dea096;
+}
+
+[data-theme="dark"] {
+  --sc-text-color: #dea096;
 }
 
 .button {
