--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -9,7 +9,11 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  color: #fad9d4;
+}
+
+.heroBanner h1 {
+  font-family: var(--ifm-font-family-monospace);
+  color: var(--sc-text-color);
 }
 
 @media screen and (max-width: 966px) {
@@ -32,9 +36,9 @@
   text-align: center;
 }
 
-h3 {
+.features h3 {
   font-family: var(--ifm-font-family-monospace);
-  color: #fad9d4;
+  color: var(--sc-text-color);
 }
 
 .featureImage {
